@@ -254,6 +254,7 @@ Philip S Tellis		philip@ncst.ernet.in
 Пухальский Юрий Андреевич pooh@cryptopro.ru
 Rainer Orth		ro@techfak.uni-bielefeld.de
 Rafael Laboissiere	laboissiere@psy.mpg.de
+Rainer Tammer		tammer@tammer.net
 Raja R Harinath		harinath@cs.umn.edu
 Ralf Corsepius		corsepiu@faw.uni-ulm.de
 Ralf Menzel		menzel@ls6.cs.uni-dortmund.de
