@@ -106,6 +106,9 @@ Bugs fixed in 1.10a:
 
   - Fix aix dependency tracking for libtool objects.
 
+  - Work around AIX sh quoting issue in AC_PROG_CC_C_O, leading to
+    unnecessary use of the `compile' script.
+
   - For nobase_*_LTLIBRARIES with nonempty directory components, the
     correct `-rpath' argument is used now.
 
