@@ -1,5 +1,10 @@
 2008-10-05  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	* m4/minuso.m4 (AM_PROG_CC_C_O): Work around shell quoting issue
+	with AIX sh; fixes depcomp6.test failure.
+	* NEWS, THANKS: Update.
+	Report by Rainer Tammer.
+
 	Print captured output before failing.
 	* tests/acloca14.test, tests/acloca17.test, tests/acloca18.test,
 	tests/aclocal.test, tests/acsilent.test, tests/alpha.test,
